--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 
 <body >
 
+<div id="header-nav">
+        <p>網站標誌 HHH</p>
+        <p>作品集</p>
+        <p>關於我們</p>
+</div>
+
 <div id="main-content">
 
     <h1>我要成為哈哈哈的人</h1>
@@ -23,7 +29,7 @@
     <button onclick="alert('恭喜！您成功施展了哈哈哈魔法！');">點擊施展魔法</button>
 
 <div id="footer">
-<p>版權所有 © 2025 Hahaha Inc.
+<p>版權所有 © 2025 Hahaha Inc.</p>
 </div>
 
 
